+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 3.0a3?
===========================

*Release data: XX-XXX-2008*

Core and Builtins
-----------------

- Issue #1692: Interpreter was not displaying location of SyntaxError

- Improve some exception messages when Windows fails to load an extension
  module. Now we get for example '%1 is not a valid Win32 application' instead
  of 'error code 193'.  Also use Unicode strings to deal with non-English
  locales.

- Issue #1587: Added instancemethod wrapper for PyCFunctions. The Python C API
  has gained a new type *PyInstanceMethod_Type* and the functions
  *PyInstanceMethod_Check(o)*, *PyInstanceMethod_New(func)* and
  *PyInstanceMethod_Function(im)*.

- Constants gc.DEBUG_OBJECT and gc.DEBUG_INSTANCE have been removed from the
  gc module; gc.DEBUG_COLLECTABLE or gc.DEBUG_UNCOLLECTABLE are now enough to
  print the corresponding list of objects considered by the garbage collector.

- Issue #1580: New free format floating point representation based on 
  "Floating-Point Printer Sample Code", by Robert G. Burger. For example
  repr(11./5) now returns '2.2' instead of '2.2000000000000002'.

- Issue #1573: Improper use of the keyword-only syntax makes the parser crash

- Issue #1564: The set implementation should special-case PyUnicode instead
  of PyString


Extension Modules
-----------------


Library
-------

- Issue #1585: IDLE uses non-existent xrange() function

- Issue #1578: Problems in win_getpass


What's New in Python 3.0a2?
===========================

*Release date: 07-Dec-2007*

(Note: this list is incomplete.)

Core and Builtins
-----------------

- str8 now has the same construction signature as bytes.

- Comparisons between str and str8 now return False/True for ==/!=.  sqlite3
  returns str8 when recreating on object from it's __conform__ value.  The